--- a/styles/styles.css
+++ b/styles/styles.css
@@ -509,7 +509,7 @@
 /* Стили для presents */
 .presents {
   width: 1170px;
-  margin: 71px auto;
+  margin: 75px auto;
   margin-bottom: 82px;
   flex-grow: 1;
 }
@@ -1195,52 +1195,60 @@
 .socnetworks {
   max-width: 108px;
   margin: 0;
-  margin-left: 2px;
+  margin-left: 4px;
   padding: 0;
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
 }
 
-.socnetworks-item {
-  margin-right: 12px;
+.socnetworks__location_footer{
+  margin-top: 2px;
 }
 
-.socnetworks-item:nth-of-type(3n) {
-  margin-right: 0;
+.socnetworks-item {
+  margin-right: 16px;
+}
+
+.socnetworks-item:last-of-type {
+  margin-right: 2px;
 }
 
 .socnetworks-link {
   display: inline-block;
-  width: 28px;
-  height: 28px;
+  width: 24px;
+  height: 24px;
+  box-sizing: border-box;
   border-radius: 50%;
   outline: none;
 }
 
-.socnetworks-rect {
-  color: #FCFCFC;
+.socnetworks-icon {
+  box-sizing: border-box;
+  border-radius: 50%;
+  outline: 3px solid rgba(252, 252, 252, 0.3);
 }
 
 .socnetworks-path {
   color: #FCFCFC;
 }
 
-/* Стили для разных состояний иконок ПОПРАВИТЬ*/
-.socnetworks-link:hover .socnetworks-rect {
-  color: #FCFCFC;
-}
-
+/* Стили для разных состояний иконок*/
 .socnetworks-link:hover {
   background-color: #2D3440;
+}
+
+.socnetworks-link:active {
+  background-color: inherit;
+  opacity: 0.5;
 }
 
 .socnetworks-link:focus {
   background-color: #2D3440;
 }
 
-.socnetworks-link:focus .socnetworks-rect {
-  color: #2D3440;
+.socnetworks-link:focus .socnetworks-icon {
+  outline: 3px solid #2D3440;
 }
 
 /* Стили для footer */
@@ -2455,5 +2463,5 @@
 }
 
 .catalog__page_catalog {
-  margin-bottom: 47px;
+  margin-bottom: 46px;
 }
